--- a/front-end/src/styles.css
+++ b/front-end/src/styles.css
@@ -17,7 +17,6 @@
     height: 100vh;
 }
 
-
 /* * * * * * * * * * * * * * * * * * * * * * * * Home.js Component * * * * * * * * * * * * * * * * * * * * * * * */
 #main-home-logo{
     margin-left: auto;
@@ -40,6 +39,17 @@
     padding: 10px;
     background-color: rgba(128, 128, 128, 0.431);
     border-radius: 15px;
+}
+
+#footer-tag{
+    color: white;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 1.25rem;
+    font-family: Copperplate;
+    font-weight: bold;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 #home-footer{
@@ -219,6 +229,20 @@
     margin-left: auto;
     margin-right: auto;
 }
+.setting-select-container{
+    position: relative;
+    display: inline-block;
+    width: 80%;
+    max-width: 850px;
+    min-width: 300px;
+    height: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+    background-color: rgb(191, 217, 250);
+    border-radius: 15px;
+}
+
 
 .player-select{
     position: absolute;
@@ -240,7 +264,22 @@
     line-height: 50px;
     border-radius: 5px;
 }
-
+#pss-settings{
+    width: 40%;
+    margin-right: auto;
+    margin-left: 10px;
+}
+#pss-settings-label{
+    width: fit-content;
+    margin-right: 10px;
+    margin-left: auto;
+    margin-bottom: auto;
+    margin-top: 0;
+    height: 50px;
+    line-height: 50px;
+    font-weight: bold;
+    padding: 0;
+}
 .player-option{
     display: flex;
     flex-direction: row;
@@ -828,7 +867,11 @@
 }
 
 /* * * * * * * * * * * * * * * * * * * * * * * * Game.js Component * * * * * * * * * * * * * * * * * * * * * * * */
-
+#settings-input{
+    border-radius: 5px;
+    padding: 5px;
+    border: 5px solid rgb(191, 217, 250);
+}
 
 #whistle-img{
     width: 50px;
